Fix grid gaps

--- a/style.css
+++ b/style.css
@@ -22,27 +22,29 @@
   box-sizing: border-box;
   list-style: none;
 }
-
-body {
-  min-height: 95vh;
-  width: 100%;
+html {
+  height: 100%;
   background-image: var(--background-gradient);
+}
+body {
+  min-height: 100vh;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* =========  Structure  =========  */
 .main-container {
-  max-width: 94vw;
-  height: 94vh;
-  margin: 3vh auto;
+  max-width: 96vw;
+  height: 96vh;
+  margin: 2vh auto;
   background: var(--background-opacity);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   display: grid;
   grid-template-columns: 1fr 6fr;
   grid-template-rows: 1fr 4fr;
-  gap: 50px;
+  gap: 1vw;
   grid-template-areas:
     "navbar header"
     "navbar main";
@@ -62,13 +64,13 @@ main {
   display: grid;
   grid-template-columns: 4fr 1fr;
   grid-template-areas: "projects announcements";
-  gap: 30px;
+  gap: 1vw;
 }
 header {
   grid-area: header;
   display: grid;
   grid-template-rows: 1fr 2fr;
-  row-gap: 20px;
+  row-gap: 0.5vw;
 }
 .top-header {
   display: grid;
@@ -312,7 +314,7 @@ nav ul li:hover {
 
 @media (-webkit-device-pixel-ratio: 1.25) {
   .assignment-card p {
-    padding-bottom: 5px;
+    padding-bottom: 0.7vw;
   }
 }
 
